<resources>
    <string name="app_name" translatable="false">Tic Tac Toe</string>
    <string name="A">-</string>
    <string name="tateti">TIC TAC TOE</string>
    <string name="eleccion">Choose</string>
    <string name="eleccion2">Choose an option</string>
    <string name="eleccion3">To get started, choose an option</string>
    <string name="jugar">Play</string>
    <string name="Reiniciar">Restart</string>
    <string name="Reinicia">Restart the game</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="empate">Draw!</string>
    <string name="ganador_mensaje">Winner: </string>
    <string name="end">Finish the game</string>
</resources>
