<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B0000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/boton7"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="504dp"
        android:layout_marginBottom="179dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton8"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton8"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="504dp"
        android:layout_marginBottom="179dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton7"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton9"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="504dp"
        android:layout_marginBottom="179dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton8"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton5"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton8"
        app:layout_constraintEnd_toStartOf="@+id/boton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton4"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton7"
        app:layout_constraintEnd_toStartOf="@+id/boton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton5"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton4"
        app:layout_constraintEnd_toStartOf="@+id/boton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton5"
        app:layout_constraintEnd_toStartOf="@+id/boton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton1"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton2"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/boton_jugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/Reiniciar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton8" />

    <Button
        android:id="@+id/botonx"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/x"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton1"
        app:layout_constraintEnd_toStartOf="@+id/botono"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/botono"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="46dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/o"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/botonx"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="150dp"
        android:text="@string/tateti"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="29dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/eleccion3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/boton_jugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton8" />

</androidx.constraintlayout.widget.ConstraintLayout>
